--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: gestu_tweens
 description: >
-  A Flutter package that provides simple and customizable tween animations for scaling, opacity changes,
-  and sliding transitions. These widgets allow developers to easily add delightful animations to their
-  Flutter applications with minimal code.
-version: 0.0.1
+  A Flutter package for simple and customizable tween animations, including scaling, opacity changes, and sliding transitions.
+version: 0.0.2
 homepage: https://gestu.dev
 repository: https://github.com/GestuDev/gestu_tweens.git
 
